Update the package.json file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nikolasmelui-nodejs-boilerplate",
-  "version": "4.1.1",
+  "name": "nodejs-redis-memcached-speedtest",
+  "version": "0.0.1",
   "private": true,
-  "description": "Lightweight nodejs boilerplate using eslint, prettier, lint-staged, husky and nodemon onboard.",
+  "description": "Speedtest for the memcached and resid caching",
   "author": {
     "name": "nikolasmelui",
     "email": "slak@samaradom.ru",
@@ -21,9 +21,12 @@
     "server",
     "webserver",
     "httpserver",
-    "boilerplate",
-    "httpsserver",
-    "nodejsserver"
+    "redis",
+    "memcached",
+    "caching",
+    "speed",
+    "test",
+    "speedtest"
   ],
   "main": "./src/server.js",
   "scripts": {
@@ -37,14 +40,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NikolasMelui/nikolasmelui-nodejs-boilerplate.git"
+    "url": "git+https://github.com/NikolasMelui/nodejs-redis-memcached-speedtest.git"
   },
   "bugs": {
-    "url": "https://github.com/NikolasMelui/nikolasmelui-nodejs-boilerplate/issues"
+    "url": "https://github.com/NikolasMelui/nodejs-redis-memcached-speedtest/issues"
   },
-  "homepage": "https://github.com/nikolasmelui/nikolasmelui-nodejs-boilerplate",
+  "homepage": "https://github.com/nikolasmelui/nodejs-redis-memcached-speedtest",
   "engines": {
-    "node": ">=12.6.0"
+    "node": ">=14.2.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
