--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "@types/node": "^14.0.1"
   },
   "eslint.packageManager": "npm",
   "lint-staged": {
@@ -65,5 +66,9 @@
       "npm run prettier",
       "npm test"
     ]
+  },
+  "dependencies": {
+    "ioredis": "^4.16.3",
+    "memcached": "^2.2.2"
   }
 }
